adjusted search page spacing to accomodate fixed header

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 :root {
-    --first-color: #F5F5F5;
+    --first-color: #FFF;
     --second-color: #000;
     --third-color: #C64103;
   }
