--- a/client/src/pages/Search/style.css
+++ b/client/src/pages/Search/style.css
@@ -1,13 +1,13 @@
-.Search {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif ;
+#loading {
+    margin-top: 13vh;
 }
 
-.Search input {
-    margin-top: 20px;
+#search-container {
+    margin-top: 15vh;
+}
+
+#search input {
+    margin-top: 20vh;
     width: 300px;
     height: 40px;
     font-size: 20px;
@@ -25,11 +25,6 @@ button {
     transition: all .5s ease-out;
     background-size: 1px 100px;
     background-position: 0 -10px;
-}
-
-.search-input {
-    margin-top: 20px;
-    margin-bottom: 30px;
 }
 
 .user {
